--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- HEADER -->
     <header class="header">
         <aside class="logo">
-            <img src="img/logo.png" alt="The Tree Kitchen Logo">
+            <img src="img/logo.jpg" alt="The Tree Kitchen Logo">
         </aside>
 
         <aside class="title">
