--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li class="splide__slide"><img src="img/peppersoup.jpg" alt=""></li>
                     <li class="splide__slide"><img src="img/friedplantain.jpg" alt=""></li>
                     <li class="splide__slide"><img src="img/suya.jpg" alt=""></li>
-                    <li class="splide__slide"><img src="img/JollofRice.jpg" alt=""></li>
+                    <li class="splide__slide"><img src="img/Jollof.jpg" alt=""></li>
                     <li class="splide__slide"><img src="img/Egusi.jpg" alt=""></li>
                 </ul>
             </div>
