--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Tree Kitchen</title>
 
-    <!-- Splide Slider -->
+
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
 
@@ -16,7 +16,6 @@
 
 <div class="wrapper">
 
-    <!-- HEADER -->
     <header class="header">
         <div class="logo">
             <img src="img/logo.jpg" alt="The Tree Kitchen Logo">
@@ -25,15 +24,15 @@
         <h1 class="site-title">The Tree Kitchen</h1>
 
         <nav class="nav">
-            <a href="#">Home</a>
-            <a href="#">About us</a>
-            <a href="#">Contacts</a>
-            <button class="order-btn">Order</button>
+            <a href="#">Hem</a>
+            <a href="#">Om oss</a>
+            <a href="#">Kontakt</a>
+            <button class="order-btn">Beställ</button>
         </nav>
     </header>
 
 
-    <!-- SLIDER -->
+
     <section class="slider">
         <div class="splide">
             <div class="splide__track">
@@ -58,11 +57,11 @@
     </script>
 
 
-    <!-- SIDE PANEL -->
+    
     <aside class="side-panel">
 
         <section class="menu card">
-            <h3>FOOD MENU</h3>
+            <h3>MATMENY</h3>
             <ul>
                 <li><a href="#">Jollof rice</a></li>
                 <li><a href="#">Fried rice</a></li>
@@ -75,68 +74,66 @@
         </section>
 
         <section class="Hours_mission card">
-            <h3>Opening Hours</h3>
+            <h3>Öppettider</h3>
             <ul>
-                <li>Måndagar – 11:00–20:00</li>
-                <li>Tisdagar – 11:00–20:00</li>
-                <li>Onsdagar – 11:00–20:00</li>
-                <li>Torsdagar – Stängt</li>
-                <li>Fredagar – 11:00–23:00</li>
-                <li>Lördagar – 11:00–23:00</li>
-                <li>Söndagar – 12:00–19:00</li>
+                <li>Måndagar - 11:00-20:00</li>
+                <li>Tisdagar - 11:00-20:00</li>
+                <li>Onsdagar - 11:00-20:00</li>
+                <li>Torsdagar - Stängt</li>
+                <li>Fredagar - 11:00-23:00</li>
+                <li>Lördagar - 11:00-23:00</li>
+                <li>Söndagar - 12:00-19:00</li>
             </ul>
 
-            <h3>Mission</h3>
+            <h3>UPPDRAGSBESKRIVNING</h3>
             <p>
-                Our mission is to elevate Nigerian cuisine by delivering exceptional quality, refined flavors, and top-tier service.  
-                We are dedicated to showcasing the richness of our culture through an elegant and memorable dining experience.
+                Vårt uppdrag är att lyfta det nigerianska köket genom att leverera exceptionell kvalitet, förfinade smaker och förstklassig service. Vi är dedikerade till att visa rikedomarna i vår kultur genom en elegant och minnesvärd matupplevelse.
             </p>
-        </section>
+            </section>
 
     </aside>
 
 
-    <!-- BEST SELLERS -->
     <section class="best-seller-title">
-        <h2>Our Best Sellers</h2>
+        <h2>Våra Bästsäljare</h2>
     </section>
 
     <section class="food-row">
 
         <article class="food-item card">
             <img src="img/combo1.jpg" alt="">
-            <p>One portion of jollof rice, plantain and meat – 200kr</p>
-            <a href="#" class="order-btn">Order</a>
+            <p>En portion jollof ris combo- 200kr</p>
+            <a href="#" class="order-btn">Beställ</a>
         </article>
 
         <article class="food-item card">
             <img src="img/suya2.jpg" alt="">
-            <p>One portion of suya (5 skewers) – 150kr</p>
-            <a href="#" class="order-btn">Order</a>
+            <p>En portion suya (5 skewers) - 150kr</p>
+            <a href="#" class="order-btn">Beställ</a>
         </article>
 
         <article class="food-item card">
             <img src="img/puffpuffpack.jpg" alt="">
             <p>One pack of puffpuff (10 pcs) – 100kr</p>
-            <a href="#" class="order-btn">Order</a>
+            <a href="#" class="order-btn">Beställ</a>
         </article>
 
     </section>
 
 
-    <!-- FOOTER -->
+
     <footer class="footer">
         <section>
-            <h4>Menu</h4>
+            <h4>Meny</h4>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Contacts</a></li>
-                <li><a href="#">About us</a></li>
+                <li><a href="#">Hem</a></li>
+                <li><a href="#">KontaKt</a></li>
+                <li><a href="#">Om oss</a></li>
             </ul>
         </section>
 
         <section>
-            <h4>Visit us at</h4>
+            <h4>Besök oss på</h4>
             <address>
                 The Tree Kitchen <br>
                 Bergvägen 64 <br>
@@ -146,7 +143,7 @@
         </section>
 
         <section>
-            <h4>Follow us</h4>
+            <h4>Följa oss</h4>
             <ul>
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">Instagram</a></li>
