--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <img src="img/logo.jpg" alt="The Tree Kitchen Logo">
         </div>
 
-        <h1 class="site-title">The Tree Kitchen</h1>
+        <h1 class="site-title">THE TREE KITCHEN</h1>
 
         <nav class="nav">
-            <a href="#">Hem</a>
-            <a href="#">Om oss</a>
-            <a href="#">Kontakt</a>
-            <button class="order-btn">Beställ</button>
+            <a href="#">HEM</a>
+            <a href="#">OM OSS</a>
+            <a href="#">KONTAKT</a>
+            <button class="order-btn">BESTÄLL</button>
         </nav>
     </header>
 
@@ -103,19 +103,19 @@
         <article class="food-item card">
             <img src="img/combo1.jpg" alt="">
             <p>En portion jollof ris combo- 200kr</p>
-            <a href="#" class="order-btn">Beställ</a>
+            <a href="#" class="order-btn">BESTÄLL</a>
         </article>
 
         <article class="food-item card">
             <img src="img/suya2.jpg" alt="">
             <p>En portion suya (5 skewers) - 150kr</p>
-            <a href="#" class="order-btn">Beställ</a>
+            <a href="#" class="order-btn">BESTÄLL</a>
         </article>
 
         <article class="food-item card">
             <img src="img/puffpuffpack.jpg" alt="">
             <p>One pack of puffpuff (10 pcs) – 100kr</p>
-            <a href="#" class="order-btn">Beställ</a>
+            <a href="#" class="order-btn">BESTÄLL</a>
         </article>
 
     </section>
@@ -124,18 +124,18 @@
 
     <footer class="footer">
         <section>
-            <h4>Meny</h4>
+            <h4>MENY</h4>
             <ul>
-                <li><a href="#">Hem</a></li>
-                <li><a href="#">KontaKt</a></li>
-                <li><a href="#">Om oss</a></li>
+                <li><a href="#">HEM</a></li>
+                <li><a href="#">KONTAKT</a></li>
+                <li><a href="#">OM OSS</a></li>
             </ul>
         </section>
 
         <section>
-            <h4>Besök oss på</h4>
+            <h4>BESÖK OOS PÅ</h4>
             <address>
-                The Tree Kitchen <br>
+                THE TREE KITCHEN <br>
                 Bergvägen 64 <br>
                 567 34 Nyköping <br>
                 thetreekitchen@gmail.com
@@ -143,7 +143,7 @@
         </section>
 
         <section>
-            <h4>Följa oss</h4>
+            <h4>FÖLJA OSS</h4>
             <ul>
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">Instagram</a></li>
