--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <aside class="side-panel">
 
         <section class="menu card">
-            <h3>MATMENY</h3>
+            <h2>MATMENY</h2>
             <ul>
                 <li><a href="#">Jollof rice</a></li>
                 <li><a href="#">Fried rice</a></li>
@@ -74,7 +74,7 @@
         </section>
 
         <section class="Hours_mission card">
-            <h3>Öppettider</h3>
+            <h2>ÖPPETTIDER</h2>
             <ul>
                 <li>Måndagar - 11:00-20:00</li>
                 <li>Tisdagar - 11:00-20:00</li>
@@ -85,7 +85,7 @@
                 <li>Söndagar - 12:00-19:00</li>
             </ul>
 
-            <h3>UPPDRAGSBESKRIVNING</h3>
+            <h2>UPPDRAGSBESKRIVNING</h2>
             <p>
                 Vårt uppdrag är att lyfta det nigerianska köket genom att leverera exceptionell kvalitet, förfinade smaker och förstklassig service. Vi är dedikerade till att visa rikedomarna i vår kultur genom en elegant och minnesvärd matupplevelse.
             </p>
@@ -95,7 +95,7 @@
 
 
     <section class="best-seller-title">
-        <h2>Våra Bästsäljare</h2>
+        <h3>Våra Bästsäljare</h3>
     </section>
 
     <section class="food-row">
